--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "axios": "^1.7.8",
+    "pino": "^9.5.0",
+    "pino-pretty": "^13.0.0",
     "playwright": "^1.49.0",
     "puppeteer": "^23.8.0"
   }
