--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
     "pino": "^9.5.0",
     "pino-pretty": "^13.0.0",
     "playwright": "^1.49.0",
-    "puppeteer": "^23.8.0"
+    "puppeteer-core": "^24.0.0"
   }
 }
